--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,12 @@
+[tool.pylint."messages control"]
+disable = [
+	"missing-module-docstring",
+	"missing-class-docstring",
+	"missing-function-docstring",
+	"invalid-name",
+	"unspecified-encoding",
+]
+
 [tool.ruff]
 line-length = 80
 
